# Winsock-client-server

./: CMakeLists.txt  Client.cpp  README.md  Server.cpp
